--- a/hello-spring/src/main/resources/static/hello-static.html
+++ b/hello-spring/src/main/resources/static/hello-static.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE HTML>
+<html>
 <head>
-    <title>Hello</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>static content</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
 정적 컨텐츠 입니다.
