--- a/hello-spring/src/main/resources/static/index.html
+++ b/hello-spring/src/main/resources/static/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>Title</title>
 </head>
 <body>
-    Hello
-    <a href="/hello">hello</a>
+Hello
+<a href="/hello">hello</a>
 </body>
 </html>
